<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <LinearLayout
        android:id="@+id/form_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_page_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_title_margin"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:text="@string/main_activity_subtitle"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/owner_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_text" />

        <EditText
            android:id="@+id/repository_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repository_text" />

        <Button
            android:layout_marginTop="@dimen/search_button_margin"
            android:id="@+id/search_stargazer_b"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stargazer_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/main_page_margin"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/form_ll"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/data_loader_pb"
        android:background="@android:color/darker_gray"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/one_hundred_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>